--- a/src/1_app/styles/index.css
+++ b/src/1_app/styles/index.css
@@ -1,3 +1,56 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* shadcn default variables */
+@layer base {
+  :root {
+    line-height: 1;
+    font-size: 16px;
+    --background: 0, 0%, 100%;
+    --foreground: 0, 0%, 0%;
+    --paragraph: 0, 4%, 95%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 47.4% 11.2%;
+    --border: 0, 0%, 0%;
+    --input: 0, 0%, 0%;
+    --card: 0, 0%, 100%;
+    --card-foreground: 0, 0%, 0%;
+    --primary: 0, 0%, 0%;
+    --primary-foreground: 0, 0%, 100%;
+    --secondary: 29, 54%, 44%;
+    --secondary-foreground: 0, 0%, 100%;
+    --accent: 19, 34%, 20%;
+    --accent-foreground: 36, 67%, 82%;
+    --destructive: 0, 100%, 39%;
+    --destructive-foreground: 0, 0%, 0%;
+    --ring: 215 20.2% 65.1%;
+    --radius: 0.5rem;
+    --container-padding-x: 40px;
+    --container-width: 1478px;
+  }
+
+  .dark {
+    --background: 224 71% 4%;
+    --foreground: 213 31% 91%;
+    --muted: 223 47% 11%;
+    --muted-foreground: 215.4 16.3% 56.9%;
+    --accent: 216 34% 17%;
+    --accent-foreground: 210 40% 98%;
+    --popover: 224 71% 4%;
+    --popover-foreground: 215 20.2% 65.1%;
+    --border: 216 34% 17%;
+    --input: 216 34% 17%;
+    --card: 224 71% 4%;
+    --card-foreground: 213 31% 91%;
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 1.2%;
+    --secondary: 222.2 47.4% 11.2%;
+    --secondary-foreground: 210 40% 98%;
+    --destructive: 0 63% 31%;
+    --destructive-foreground: 210 40% 98%;
+    --ring: 216 34% 17%;
+  }
+}
